force-app/main/default/objects/maps__Route__c/maps__Route__c.object-meta.xml
<CustomObject>
    <label>Maps Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>