force-app/main/default/objects/maps__Route__c/fields/maps__TravelDistance__c.field-meta.xml
<CustomField>
    <fullName>maps__TravelDistance__c</fullName>
    <label>Travel Distance (Miles)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>