force-app/main/default/objects/maps__Route__c/fields/maps__TravelTime__c.field-meta.xml
<CustomField>
    <fullName>maps__TravelTime__c</fullName>
    <label>Travel Time (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>